增加了子目录模式与修正部分 bug
